    severity of the reported bugs, based on a patch from Adam D. Barratt
    (Closes: #386124)
  * tagpending: enable (-c cmdline flag) tagging bugs as confirmed in addition
    to tagging them as pending, based on a patch from Adam D. Barratt
    (Closes: #382884)
  * tagpending: factorized some code for delivering info to the user
  * uscan: added --force-download to force download when changelog is in sync
    with upstream version, based on a patch from Ian Wienand (Closes: #364116)

 -- Stefano Zacchiroli <zack@debian.org>  Sun, 25 Feb 2007 16:17:41 +0100

devscripts (2.9.27) unstable; urgency=low

  * checkbashisms: check for 'select' (thanks to James Abley, Ubuntu user)
  * debchange: add support for Ubuntu's distro codenames
  * debchange: add support for ~ in version numbers (Closes: #400173)

 -- Julian Gilbey <jdg@debian.org>  Fri,  1 Dec 2006 08:02:53 +0000

devscripts (2.9.26) unstable; urgency=low

  * deb-reversion: update to new upstream version (Closes: #329374)
  * debc/debi: handle specifying changes file on command line again
    (Closes: #398152)
  * debc/debi: handle arch all packages correctly (oops!) (Closes:
    #398597)
  * dget: new upstream version, supports looking in other places for
    files, new binnmu version scheme, --no-cache, file:// and copy:// and
    fixed bug that --help/--version required other arguments (Closes:
    #385954, #356208)
  * nmudiff: allow configuration of whether to send report to existing
    bugs or create a new bug (Closes: #397912)
  * uscan: avoid spurious undefined warning if --package is used

 -- Julian Gilbey <jdg@debian.org>  Fri, 17 Nov 2006 13:03:03 +0000

devscripts (2.9.25) unstable; urgency=low

  * nmudiff: reinstall mutt as mailer of choice, but now provide the
    option to use it or not (Closes: #397641)

 -- Julian Gilbey <jdg@debian.org>  Wed,  8 Nov 2006 20:39:24 +0000

devscripts (2.9.24) unstable; urgency=low

  * debc/debi: handle multi-arch .changes files (Closes: #385673)