@@ -21,8 +21,9 @@ Don't print actions taken.
 List every bug checked.
 .TP
 .BR \-f ", " \-\-force
-Do not query the BTS for already tagged bugs, that is, force all bugs to
-be tagged as pending even if they already are.
+Do not query the BTS for already tagged or not owned bugs, that is, force all
+bugs to be tagged, no matter if they are already tagged or (worst) belong to
+other source packages.
 .TP
 .BR \-c ". " \-\-confirm
 For each bug tagged as pending, also tag it as confirmed.
