@@ -44,10 +44,12 @@ devscripts (2.9.28) UNRELEASED; urgency=low
     to tagging them as pending, based on a patch from Adam D. Barratt
     (Closes: #382884)
   * tagpending: factorized some code for delivering info to the user
+  * tagpending: added an extra check to ensure that bugs to be tagged belong
+    to the current package, also avoids tagging of wnpp bugs (Closes: #398178)
   * uscan: added --force-download to force download when changelog is in sync
     with upstream version, based on a patch from Ian Wienand (Closes: #364116)
 
- -- Stefano Zacchiroli <zack@debian.org>  Sun, 25 Feb 2007 16:17:41 +0100
+ -- Stefano Zacchiroli <zack@debian.org>  Mon, 26 Feb 2007 00:43:21 +0100
 
 devscripts (2.9.27) unstable; urgency=low
 
